--- a/html/coding/badge/badge.html
+++ b/html/coding/badge/badge.html
@@ -61,29 +61,29 @@
                     <div class="badge__contents">
                         <div class="badge__con1">
                             <a class="openPopup" href="#">
-                                <img class="openPopup" src="/html/coding/assets/img/badge/badge.svg" alt="badge">
-                                <span class="openPopup" class="badge__text">만나서 반가워</span>
+                                <img src="/html/coding/assets/img/badge/badge.svg" alt="badge">
+                                <span class="badge__text">만나서 반가워</span>
                             </a>
                         </div>
                         <!-- badge__con1 -->
                         <div class="badge__con2">
                             <a class="openPopup" href="#">
-                                <img class="openPopup" src="/html/coding/assets/img/badge/badge1.svg" alt="badge">
-                                <span class="openPopup" class="badge__text">출석 요정</span>
+                                <img src="/html/coding/assets/img/badge/badge1.svg" alt="badge">
+                                <span class="badge__text">출석 요정</span>
                             </a>
                         </div>
                         <!-- badge__con -->
                         <div class="badge__con3">
                             <a class="openPopup" href="#">
-                                <img class="openPopup" src="/html/coding/assets/img/badge/badge2.svg" alt="badge">
-                                <span class="openPopup" class="badge__text">7일 연속 출석</span>
+                                <img src="/html/coding/assets/img/badge/badge2.svg" alt="badge">
+                                <span class="badge__text">7일 연속 출석</span>
                             </a>
                         </div>
                         <!-- badge__con3 -->
                         <div class="badge__con4">
                             <a class="openPopup" href="#">
-                                <img class="openPopup" src="/html/coding/assets/img/badge/badge3.svg" alt="badge">
-                                <span class="openPopup" class="badge__text">커뮤니티 첫 게시물</span>
+                                <img src="/html/coding/assets/img/badge/badge3.svg" alt="badge">
+                                <span class="badge__text">커뮤니티 첫 게시물</span>
                             </a>
                         </div>
                         <!-- badge__con4 -->
@@ -92,28 +92,28 @@
 
                     <div class="badge__contents">
                         <div class="badge__con1">
-                            <a href="#">
+                            <a class="openPopup" href="#">
                                 <img src="/html/coding/assets/img/badge/badge.svg" alt="badge">
                                 <span class="badge__text">만나서 반가워</span>
                             </a>
                         </div>
                         <!-- badge__con1 -->
                         <div class="badge__con2">
-                            <a href="#">
+                            <a class="openPopup" href="#">
                                 <img src="/html/coding/assets/img/badge/badge1.svg" alt="badge">
                                 <span class="badge__text">출석 요정</span>
                             </a>
                         </div>
                         <!-- badge__con -->
                         <div class="badge__con3">
-                            <a href="#">
+                            <a class="openPopup" href="#">
                                 <img src="/html/coding/assets/img/badge/badge2.svg" alt="badge">
                                 <span class="badge__text">7일 연속 출석</span>
                             </a>
                         </div>
                         <!-- badge__con3 -->
                         <div class="badge__con4">
-                            <a href="#">
+                            <a class="openPopup" href="#">
                                 <img src="/html/coding/assets/img/badge/badge3.svg" alt="badge">
                                 <span class="badge__text">커뮤니티 첫 게시물</span>
                             </a>
@@ -124,28 +124,28 @@
 
                     <div class="badge__contents">
                         <div class="badge__con1">
-                            <a href="#">
+                            <a class="openPopup" href="#">
                                 <img src="/html/coding/assets/img/badge/badge.svg" alt="badge">
                                 <span class="badge__text">만나서 반가워</span>
                             </a>
                         </div>
                         <!-- badge__con1 -->
                         <div class="badge__con2">
-                            <a href="#">
+                            <a class="openPopup" href="#">
                                 <img src="/html/coding/assets/img/badge/badge1.svg" alt="badge">
                                 <span class="badge__text">출석 요정</span>
                             </a>
                         </div>
                         <!-- badge__con -->
                         <div class="badge__con3">
-                            <a href="#">
+                            <a class="openPopup" href="#">
                                 <img src="/html/coding/assets/img/badge/badge2.svg" alt="badge">
                                 <span class="badge__text">7일 연속 출석</span>
                             </a>
                         </div>
                         <!-- badge__con3 -->
                         <div class="badge__con4">
-                            <a href="#">
+                            <a class="openPopup" href="#">
                                 <img src="/html/coding/assets/img/badge/badge3.svg" alt="badge">
                                 <span class="badge__text">커뮤니티 첫 게시물</span>
                             </a>
@@ -153,38 +153,6 @@
                         <!-- badge__con4 -->
                     </div>
                     <!-- badge__contents3 -->
-
-                    <div class="badge__contents">
-                        <div class="badge__con1">
-                            <a href="#">
-                                <img src="/html/coding/assets/img/badge/badge.svg" alt="badge">
-                                <span class="badge__text">만나서 반가워</span>
-                            </a>
-                        </div>
-                        <!-- badge__con1 -->
-                        <div class="badge__con2">
-                            <a href="#">
-                                <img src="/html/coding/assets/img/badge/badge1.svg" alt="badge">
-                                <span class="badge__text">출석 요정</span>
-                            </a>
-                        </div>
-                        <!-- badge__con -->
-                        <div class="badge__con3">
-                            <a href="#">
-                                <img src="/html/coding/assets/img/badge/badge2.svg" alt="badge">
-                                <span class="badge__text">7일 연속 출석</span>
-                            </a>
-                        </div>
-                        <!-- badge__con3 -->
-                        <div class="badge__con4">
-                            <a href="#">
-                                <img src="/html/coding/assets/img/badge/badge3.svg" alt="badge">
-                                <span class="badge__text">커뮤니티 첫 게시물</span>
-                            </a>
-                        </div>
-                        <!-- badge__con4 -->
-                    </div>
-                    <!-- badge__contents4 -->
 
                     <div class="badge__popup">
                         <div class="badge__popup1">
