--- a/html/coding/main/main.html
+++ b/html/coding/main/main.html
@@ -29,7 +29,7 @@
             <div class="container">
                 <div class="header__inner">
                     <h1 class="logo">
-                        <a href="main.html"><img src="../assets/ico/logo/logo.svg" alt="logo"></a>
+                        <a href="main.html"><img src="../assets/ico/logo/nav_logo.svg" alt="logo"></a>
                     </h1>
                     <nav class="nav" role="navigation">
                         <ul>
