--- a/html/coding/community/comm_notice.html
+++ b/html/coding/community/comm_notice.html
@@ -97,7 +97,7 @@
                         </div>
                         <div class="right">
                             <form action="boardSearch.php" name="table__top" method="get">
-                                <fieldset>
+                                <fieldset class="comm__fieldset">
                                     <legend class="blind">게시판 검색 영역</legend>
                                     <input type="text" name="searchKeyword" placeholder="검색어를 입력해주세요.">
                                     <select name="searchOption" id="searchOption">
