--- a/html/coding/mypage/mypagetest.html
+++ b/html/coding/mypage/mypagetest.html
@@ -131,13 +131,13 @@
                         <h2 class="calendar__title">May 2024</h2>
                         <div class="calendar__textwrap2">
                             <a href="#"><span class="calendar__nav">&lt;</span></a>
-                            <a href="#"></a><span class="calendar__nav">&gt;</span></a>
+                            <a href="#"><span class="calendar__nav">&gt;</span></a>
                         </div>
                     </div>
                     <div class="calendar__cont">
                         <div class="calendar__cont1">
                             <table>
-                                <thead>
+                                <thead class="c__thead">
                                     <tr class="thead">
                                         <th>SUN</th>
                                         <th>MON</th>
