--- a/html/coding/saveMarathon.html/saveMarathon.html
+++ b/html/coding/saveMarathon.html/saveMarathon.html
@@ -79,7 +79,7 @@
                             </div>
                             <!-- save__con1 -->
                             <div class="save__con2">
-                                <a class="save__detail" href="#">상세정보</a>
+                                <a class="save__detail" href="#">웹사이트 바로가기</a>
                                 <svg width="8" height="8" viewBox="0 0 8 8" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -112,7 +112,7 @@
                             </div>
                             <!-- save__con1 -->
                             <div class="save__con2">
-                                <a class="save__detail" href="#">상세정보</a>
+                                <a class="save__detail" href="#">웹사이트 바로가기</a>
                                 <svg width="8" height="8" viewBox="0 0 8 8" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -145,7 +145,7 @@
                             </div>
                             <!-- save__con1 -->
                             <div class="save__con2">
-                                <a class="save__detail" href="#">상세정보</a>
+                                <a class="save__detail" href="#">웹사이트 바로가기</a>
                                 <svg width="8" height="8" viewBox="0 0 8 8" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -178,7 +178,7 @@
                             </div>
                             <!-- save__con1 -->
                             <div class="save__con2">
-                                <a class="save__detail" href="#">상세정보</a>
+                                <a class="save__detail" href="#">웹사이트 바로가기</a>
                                 <svg width="8" height="8" viewBox="0 0 8 8" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -214,7 +214,7 @@
                             </div>
                             <!-- save__con1 -->
                             <div class="save__con2">
-                                <a class="save__detail" href="#">상세정보</a>
+                                <a class="save__detail" href="#">웹사이트 바로가기</a>
                                 <svg width="8" height="8" viewBox="0 0 8 8" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -247,7 +247,7 @@
                             </div>
                             <!-- save__con1 -->
                             <div class="save__con2">
-                                <a class="save__detail" href="#">상세정보</a>
+                                <a class="save__detail" href="#">웹사이트 바로가기</a>
                                 <svg width="8" height="8" viewBox="0 0 8 8" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -280,7 +280,7 @@
                             </div>
                             <!-- save__con1 -->
                             <div class="save__con2">
-                                <a class="save__detail" href="#">상세정보</a>
+                                <a class="save__detail" href="#">웹사이트 바로가기</a>
                                 <svg width="8" height="8" viewBox="0 0 8 8" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -313,7 +313,7 @@
                             </div>
                             <!-- save__con1 -->
                             <div class="save__con2">
-                                <a class="save__detail" href="#">상세정보</a>
+                                <a class="save__detail" href="#">웹사이트 바로가기</a>
                                 <svg width="8" height="8" viewBox="0 0 8 8" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -349,7 +349,7 @@
                             </div>
                             <!-- save__con1 -->
                             <div class="save__con2">
-                                <a class="save__detail" href="#">상세정보</a>
+                                <a class="save__detail" href="#">웹사이트 바로가기</a>
                                 <svg width="8" height="8" viewBox="0 0 8 8" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -382,7 +382,7 @@
                             </div>
                             <!-- save__con1 -->
                             <div class="save__con2">
-                                <a class="save__detail" href="#">상세정보</a>
+                                <a class="save__detail" href="#">웹사이트 바로가기</a>
                                 <svg width="8" height="8" viewBox="0 0 8 8" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -415,7 +415,7 @@
                             </div>
                             <!-- save__con1 -->
                             <div class="save__con2">
-                                <a class="save__detail" href="#">상세정보</a>
+                                <a class="save__detail" href="#">웹사이트 바로가기</a>
                                 <svg width="8" height="8" viewBox="0 0 8 8" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -448,7 +448,7 @@
                             </div>
                             <!-- save__con1 -->
                             <div class="save__con2">
-                                <a class="save__detail" href="#">상세정보</a>
+                                <a class="save__detail" href="#">웹사이트 바로가기</a>
                                 <svg width="8" height="8" viewBox="0 0 8 8" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
