--- a/html/coding/saveMarathon.html/saveMarathon.html
+++ b/html/coding/saveMarathon.html/saveMarathon.html
@@ -447,6 +447,7 @@
                                 </div>
                             </div>
                             <!-- save__con1 -->
+
                             <div class="save__con2">
                                 <a class="save__detail" href="#">웹사이트 바로가기</a>
                                 <svg width="8" height="8" viewBox="0 0 8 8" fill="none"
@@ -461,9 +462,47 @@
                         <!-- save__wrap4 -->
                     </div>
                     <!-- save__contents3 -->
-
                 </div>
                 <!-- save__container -->
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <span class="close" onclick="closeModal('modal1')"></span>
+                        <div class="modal__text">
+                            <div class="modal__info">
+                                <span class="modal__cont">날짜</span> <span class="detail__cont1">24.05.17 (금) -
+                                    24.05.19
+                                    (일)</span>
+                            </div>
+                            <div class="modal__info">
+                                <span class="modal__cont">지역</span> <span class="detail__cont1"></span>강원도 >
+                                정선군</span>
+                            </div>
+                            <div class="modal__info">
+                                <span class="modal__cont">장소</span> <span class="detail__cont1"></span>하이원
+                                리조트(하이캐슬,
+                                메이힐스)</span>
+                            </div>
+                            <div class="modal__info">
+                                <span class="modal__cont">주관</span> <span class="detail__cont1"></span>(주)1986프로덕션,
+                                (주)브룩컴퍼니</span>
+                            </div>
+                            <div class="modal__info">
+                                <span class="modal__cont">비용</span>
+                                <ul>
+                                    <li>일반 참가권: 55,000원</li>
+                                    <li>3+1 참가권: 165,000원</li>
+                                    <li>장애인 할인: 44,000원</li>
+                                    <li>학생 할인: 44,000원</li>
+                                    <li>(7세 이하 미취학 아동 무료 입장 - 보호자 동반 시)</li>
+                                </ul>
+                            </div>
+                            <div class="modal__btn">
+                                <a href="#">웹사이트 바로가기</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
             </div>
     </div>
